--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,29 @@
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #ececec;
+  }
 }
 
 .header__container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+}
+
+@media screen and (min-width: 1200px) {
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .header__navigation {
@@ -18,11 +34,34 @@
   display: flex;
 }
 
-.header__connect {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-  justify-content: center;
+@media screen and (max-width: 767px) {
+  .header-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__connect {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header__connect {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__connect {
+    display: flex;
+    margin-left: 84px;
+    flex-direction: column;
+  }
 }
 
 .header__contacts:nth-of-type(1) {
@@ -31,6 +70,12 @@
 
 .header__logo {
   margin-right: 93px;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+  }
 }
 
 .header-list__item {
@@ -117,6 +162,11 @@
   align-self: center;
   transition: color 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.open-menu-btn {
+  background-color: none;
+  margin-left: auto;
 }
 
 :root {
@@ -364,7 +414,7 @@ h1 {
 }
 
 .main-title__section {
-  padding: 118px 60px;
+  padding: 118px 60px 118px 60px;
   width: 100%;
   display: flex;
   align-items: center;
