--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,12 +1,22 @@
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #ececec;
+  }
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
 
   &__container {
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
   }
   &__navigation {
     display: flex;
@@ -14,13 +24,30 @@
 
   &-list {
     display: flex;
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
   }
 
   &__connect {
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-    justify-content: center;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-left: auto;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+    }
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: flex;
+      margin-left: 84px;
+      flex-direction: column;
+
+      // align-items: center;
+      // justify-content: center;
+    }
   }
   &__contacts:nth-of-type(1) {
     margin-right: 50px;
@@ -28,6 +55,9 @@
 
   &__logo {
     margin-right: 93px;
+    @media screen and (min-width: 768px) {
+      margin-right: 88px;
+    }
   }
 
   &-list__item {
@@ -112,4 +142,9 @@
   align-self: center;
   transition: color 200ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.open-menu-btn {
+  background-color: none;
+  margin-left: auto;
 }
