--- a/sass/components/_title-section.scss
+++ b/sass/components/_title-section.scss
@@ -18,7 +18,8 @@ h1 {
   // left: 60px;
 }
 .main-title__section {
-  padding: 118px 60px;
+  padding: 118px 60px 118px 60px;
+  // padding-right: 60px;
   width: 100%;
   display: flex;
   align-items: center;
