--- a/css/main.css
+++ b/css/main.css
@@ -1546,7 +1546,7 @@ textarea {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .photo-list__item {
     flex-basis: calc(100% / 2 - 20px);
     margin-right: 20px;
@@ -1559,7 +1559,7 @@ textarea {
     margin-bottom: 30px;
   }
   .photo-list__item:nth-last-of-type(9) {
-    margin-bottom: 0;
+    margin-bottom: 30px;
   }
 }
 
