--- a/sass/components/_potrfolio.scss
+++ b/sass/components/_potrfolio.scss
@@ -25,7 +25,7 @@
       margin-bottom: 0;
     }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-basis: calc(100% / 2 - 20px);
     margin-right: 20px;
     margin-bottom: 30px;
@@ -36,7 +36,7 @@
       margin-bottom: 30px;
     }
     &:nth-last-of-type(9) {
-      margin-bottom: 0;
+      margin-bottom: 30px;
     }
   }
   width: 100%;
