--- a/sass/components/_kinds_main.scss
+++ b/sass/components/_kinds_main.scss
@@ -17,16 +17,15 @@
 .kinds-list {
   @media screen and (min-width: 768px) {
     display: flex;
-    flex-wrap: nowrap;
   }
-  @media screen and (min-width: 1px) and (max-width: 767px) {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-  }
+  display: flex;
+  flex-wrap: wrap;
 }
+
 .kinds-list__item {
   @media screen and (min-width: 1px) and (max-width: 767px) {
-    flex-basis: calc(100% / 2 - 30px);
+    flex-basis: calc (100%/3 - 30px);
+    margin-left: 8px;
+    margin-bottom: 15px;
   }
 }
